--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-mocks": "~1.2.16",
     "angular-sanitize": "~1.2.16",
     "angular-ui-bootstrap": "~0.10.0",
-    "angular-route": "~1.2.16"
+    "angular-route": "~1.2.16",
+    "angular-bootstrap": "~0.11.2"
   }
 }
