--- a/package.json
+++ b/package.json
@@ -1,33 +1,42 @@
 {
-  "name": "xdccwebapp",
-  "version": "0.0.1",
-  "scripts": {
-    "start": "node app",
-    "postinstall": "./node_modules/bower/bin/bower install"
-  },
-  "dependencies": {
-    "express": "3.x",
-    "underscore": "~1.5.1",
-    "i18next": "~1.7.1",
-    "jade": "^1.3.1",
-    "bower": "1.3.x",
-    "karma": "^0.12.4",
-    "karma-osx-reporter": "0.0.4",
-    "karma-jasmine": "^0.1.5",
-    "gulp": "^3.6.0",
-    "gulp-less": "^1.2.3",
-    "gulp-changed": "^0.3.0",
-    "gulp-concat": "^2.2.0",
-    "phantomjs": "^1.9.7-3",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "gulp-jshint": "^1.5.3",
-    "jshint-stylish": "^0.1.5",
-    "gulp-exec": "^1.0.4",
-    "gulp-livereload": "^1.2.0",
-    "gulp-karma": "0.0.4"
-  },
-  "engines": {
-    "node": "0.10.x",
-    "npm": "1.2.x"
-  }
+    "name": "xdcc-webapp",
+    "version": "0.0.1",
+    "scripts": {
+        "start": "node server.js",
+        "postinstall": "./node_modules/bower/bin/bower install"
+    },
+    "dependencies": {
+        "body-parser": "^1.8.3",
+        "bower": "1.3.x",
+        "connect-assets": "^4.3.0",
+        "cookie-parser": "^1.3.3",
+        "express": "4.x",
+        "express-http-proxy": "^0.2.2",
+        "i18next": "~1.7.1",
+        "jade": "^1.3.1",
+        "less": "^1.7.5",
+        "request": "^2.45.0",
+        "serve-static": "^1.6.1",
+        "underscore": "~1.5.1"
+    },
+    "engines": {
+        "node": "0.10.x",
+        "npm": "2.0.x"
+    },
+    "devDependencies": {
+        "gulp": "^3.8.8",
+        "gulp-changed": "^0.3.0",
+        "gulp-concat": "^2.2.0",
+        "gulp-exec": "^1.0.4",
+        "gulp-jshint": "^1.5.3",
+        "gulp-karma": "0.0.4",
+        "gulp-less": "^1.2.3",
+        "gulp-livereload": "^1.2.0",
+        "jshint-stylish": "^0.1.5",
+        "karma": "^0.12.4",
+        "karma-jasmine": "^0.1.5",
+        "karma-osx-reporter": "0.0.4",
+        "karma-phantomjs-launcher": "^0.1.4",
+        "phantomjs": "^1.9.7-3"
+    }
 }
