--- a/bower.json
+++ b/bower.json
@@ -2,16 +2,11 @@
   "name": "xdcc-webapp",
   "version": "0.0.1",
   "dependencies": {
-    "underscore": "~1.5.1",
-    "jquery": "~2.0.3",
-    "angular": "~1.2.16",
-    "bootstrap": "~3.1.1",
-    "angular-ui-utils": "bower",
-    "angular-resource": "~1.2.16",
-    "angular-mocks": "~1.2.16",
-    "angular-sanitize": "~1.2.16",
-    "angular-ui-bootstrap": "~0.10.0",
-    "angular-route": "~1.2.16",
-    "angular-bootstrap": "~0.11.2"
+    "bootstrap": "~3.3.1",
+    "angular-bootstrap": "~0.12.0",
+    "angular": "~1.3.8",
+    "angular-resource": "~1.3.8",
+    "angular-route": "~1.3.13",
+    "angular-socket-io": "~0.7.0"
   }
 }
