--- a/package.json
+++ b/package.json
@@ -1,42 +1,57 @@
 {
-    "name": "xdcc-webapp",
-    "version": "0.0.1",
-    "scripts": {
-        "start": "node server.js",
-        "postinstall": "./node_modules/bower/bin/bower install"
-    },
-    "dependencies": {
-        "body-parser": "^1.8.3",
-        "bower": "1.3.x",
-        "connect-assets": "^4.3.0",
-        "cookie-parser": "^1.3.3",
-        "express": "4.x",
-        "express-http-proxy": "^0.2.2",
-        "i18next": "~1.7.1",
-        "jade": "^1.3.1",
-        "less": "^1.7.5",
-        "request": "^2.45.0",
-        "serve-static": "^1.6.1",
-        "underscore": "~1.5.1"
-    },
-    "engines": {
-        "node": "0.10.x",
-        "npm": "2.0.x"
-    },
-    "devDependencies": {
-        "gulp": "^3.8.8",
-        "gulp-changed": "^0.3.0",
-        "gulp-concat": "^2.2.0",
-        "gulp-exec": "^1.0.4",
-        "gulp-jshint": "^1.5.3",
-        "gulp-karma": "0.0.4",
-        "gulp-less": "^1.2.3",
-        "gulp-livereload": "^1.2.0",
-        "jshint-stylish": "^0.1.5",
-        "karma": "^0.12.4",
-        "karma-jasmine": "^0.1.5",
-        "karma-osx-reporter": "0.0.4",
-        "karma-phantomjs-launcher": "^0.1.4",
-        "phantomjs": "^1.9.7-3"
-    }
+  "name": "xdcc-webapp",
+  "version": "0.0.1",
+  "scripts": {
+    "start": "node app",
+    "postinstall": "./node_modules/bower/bin/bower install",
+    "ci": "grunt ci"
+  },
+  "dependencies": {
+    "express": "4.x",
+    "express-http-proxy": "^0.3.1",
+    "i18next": "1.7.4",
+    "jade": "^1.3.1",
+    "jquery": "^2.1.1",
+    "morgan": "^1.5.0",
+    "serve-static": "^1.7.1",
+    "underscore": "~1.8.0",
+    "socket.io": "~0.9.16"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.2.x"
+  },
+  "devDependencies": {
+    "bower": "1.3.x",
+    "browserify": "^6.3.4",
+    "browserify-ngannotate": "^0.5.0",
+    "browserify-shim": "^3.8.0",
+    "chai": "^1.10.0",
+    "glob": "^4.3.2",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-less": "^0.12.0",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-filerev": "^2.1.2",
+    "grunt-mocha": "^0.4.11",
+    "grunt-mocha-test": "^0.12.4",
+    "grunt-nodemon": "^0.3.0",
+    "jshint-stylish": "^1.0.0",
+    "matchdep": "^0.3.0",
+    "mocha": "^2.0.1",
+    "phantomjs": "^1.9.7-3",
+    "sinon": "^1.12.1",
+    "sinon-chai": "^2.6.0",
+    "watchify": "^2.2.1"
+  },
+  "browser": {
+    "bootstrap": "./public/bower_components/bootstrap/dist/js/bootstrap.js",
+    "angular": "./public/bower_components/angular/angular.js",
+    "angular-resource": "./public/bower_components/angular-resource/angular-resource.js",
+    "angular-route": "./public/bower_components/angular-route/angular-route.js",
+    "angular-bootstrap": "./public/bower_components/angular-bootstrap/ui-bootstrap-tpls.js",
+    "angular-socket-io": "./public/bower_components/angular-socket-io/socket.js"
+  },
+  "browserify-shim": "./shim.js"
 }
