--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,14 @@
   "version": "0.0.1",
   "dependencies": {
     "bootstrap": "~3.3.1",
+    "angular-bootstrap": "~0.12.0",
     "angular": "~1.3.14",
     "angular-resource": "~1.3.14",
     "angular-route": "~1.3.14",
-    "angular-socket-io": "~0.7.0"
+    "angular-socket-io": "~0.7.0",
+    "ngstorage": "~0.3.0"
+  },
+  "resolutions": {
+    "angular": "~1.3.14"
   }
 }
