--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "4.x",
     "express-http-proxy": "^0.3.1",
+    "express-jwt": "~2.1.0",
     "i18next": "1.7.4",
     "jade": "^1.3.1",
     "jquery": "^2.1.1",
