--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "angular-resource": "~1.3.14",
     "angular-route": "~1.3.14",
     "angular-socket-io": "~0.7.0",
-    "ngstorage": "~0.3.0"
+    "angular-locker": "~1.2.1"
   },
   "resolutions": {
     "angular": "~1.3.14"
