--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "morgan": "^1.5.0",
     "serve-static": "^1.7.1",
     "underscore": "~1.8.0",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "piped-xdcc": "0.0.4"
   },
   "engines": {
     "node": "0.10.x",
