--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "serve-static": "^1.7.1",
     "underscore": "~1.8.0",
     "socket.io": "~0.9.16",
-    "piped-xdcc": "0.0.4"
+    "piped-xdcc": "~0.0.6"
   },
   "engines": {
     "node": "0.10.x",
