--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "xdcc-webapp",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "start": "node app",
     "postinstall": "./node_modules/bower/bin/bower install",
@@ -8,8 +9,8 @@
   },
   "dependencies": {
     "express": "4.x",
-    "express-http-proxy": "^0.3.1",
-    "express-jwt": "~2.1.0",
+    "express-http-proxy": "^0.5.0",
+    "express-jwt": "^3.0.0",
     "i18next": "1.7.4",
     "jade": "^1.3.1",
     "jquery": "^2.1.1",
@@ -24,28 +25,28 @@
     "npm": "1.2.x"
   },
   "devDependencies": {
-    "bower": "1.3.x",
-    "browserify": "^6.3.4",
-    "browserify-ngannotate": "^0.5.0",
+    "bower": "1.4.x",
+    "browserify": "^9.0.8",
+    "browserify-ngannotate": "^0.7.1",
     "browserify-shim": "^3.8.0",
-    "chai": "^1.10.0",
-    "glob": "^4.3.2",
+    "chai": "^2.2.0",
+    "glob": "^5.0.5",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-less": "^0.12.0",
-    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-jshint": "^0.11.1",
+    "grunt-contrib-less": "^1.0.0",
+    "grunt-contrib-uglify": "^0.9.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
     "grunt-mocha": "^0.4.11",
     "grunt-mocha-test": "^0.12.4",
-    "grunt-nodemon": "^0.3.0",
+    "grunt-nodemon": "^0.4.0",
     "jshint-stylish": "^1.0.0",
     "matchdep": "^0.3.0",
     "mocha": "^2.0.1",
     "phantomjs": "^1.9.7-3",
     "sinon": "^1.12.1",
     "sinon-chai": "^2.6.0",
-    "watchify": "^2.2.1"
+    "watchify": "^3.1.0"
   },
   "browser": {
     "bootstrap": "./public/bower_components/bootstrap/dist/js/bootstrap.js",
