travis: specify deploy strategy

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ deploy:
   provider: heroku
   api_key:
     secure: BG/Ri8kZwxSaJVx2H/u7M7yvyYPXhAw/dTF0X1GBwfG0ToiRLqroEGzdOw79D+lyi4DkpNEAcE3QsGy2j0WH/rchVF+kRM0qcf0QI4GAaA20sHJyZqmm77yDGKxk04VDGSgY5ZuOSXuW3Mnw6q67tKeC48/yr7uMse2jRVikmMI=
+  strategy: api
   app: xdcc-webapp
   on:
     repo: Yuyuu/xdcc-webapp
