--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app",
+    "start": "node server.js",
     "postinstall": "./node_modules/bower/bin/bower install",
-    "test": "grunt test"
+    "test": "./node_modules/.bin/grunt test"
   },
   "dependencies": {
     "express": "4.x",
@@ -31,6 +31,8 @@
     "browserify-shim": "^3.8.0",
     "chai": "^2.2.0",
     "glob": "^5.0.5",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-jshint": "^0.11.1",
     "grunt-contrib-less": "^1.0.0",
@@ -43,7 +45,6 @@
     "jshint-stylish": "^1.0.0",
     "matchdep": "^0.3.0",
     "mocha": "^2.0.1",
-    "phantomjs": "^1.9.7-3",
     "sinon": "^1.12.1",
     "sinon-chai": "^2.6.0",
     "watchify": "^3.1.0"
