--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: node_js
+sudo: false
 node_js:
   - "0.12"
 
-before_install:
-  - npm install -g grunt-cli
+cache:
+  directories:
+    - node_modules
 
 deploy:
   provider: heroku
