--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express": "4.x",
     "express-http-proxy": "^0.5.0",
     "express-jwt": "^3.0.0",
-    "i18next": "1.7.4",
+    "i18next": "^1.9.0",
     "jade": "^1.3.1",
     "jquery": "^2.1.1",
     "morgan": "^1.5.0",
@@ -42,7 +42,7 @@
     "grunt-mocha": "^0.4.11",
     "grunt-mocha-test": "^0.12.4",
     "grunt-nodemon": "^0.4.0",
-    "jshint-stylish": "^1.0.0",
+    "jshint-stylish": "^2.0.0",
     "matchdep": "^0.3.0",
     "mocha": "^2.0.1",
     "sinon": "^1.12.1",
